--- a/style/style.css
+++ b/style/style.css
@@ -508,6 +508,211 @@ img {
 
     }
 
+    /* ----- Mobile--Version ---  */
+    /* -----------414px------------ */
+
+
+    @media (max-width: 414px) {
+
+            body {
+
+                max-width: 41.4rem;
+                min-width: 40rem;
+            }
+
+
+            .margin {
+
+                margin: 0rem 2rem 0rem 2rem;
+            }
+
+
+            /* Navbar */
+
+            .main {
+
+                max-width: 37.4rem;
+                margin-top: 2.4rem;
+            }
+
+            /* --- Typemaster - Section */
+
+            .keyboard {
+
+                flex-direction: column;
+                width: 37.4rem;
+                margin-bottom: 2.4rem;
+            }
+
+            .keyboard__content {
+
+                width: 100%;
+                margin-bottom: 2.4rem;
+            }
+    
+            h1 {
+
+                font-size: 4.8rem;
+            }
+    
+            .img__desktop {
+    
+                display: none;
+            }
+    
+            .keyboard__img {
+    
+                width: 37.2rem;
+                height: 33.1rem;
+                position: relative;
+                overflow: hidden;
+            }
+    
+            .img__mobile {
+    
+                position: absolute;
+                display: inline;
+                right: -30px;
+                width: 37.2rem;
+                height: 33.1rem;
+                padding-left: 2.5rem;
+            }
+    
+            .keyboard__btn {
+    
+                margin-right: 2rem;
+            }
+
+            /* IMG --- SECTION-- */
+
+            .img__container {
+
+                flex-wrap: wrap;
+                justify-content:flex-start;
+                align-items: stretch;
+            
+            }
+    
+            .background_relative {
+    
+                position: relative;
+                width: 12.9rem;
+                height: 19.3rem;
+                left: -50px;
+            }
+            
+            .background_relative > .background {
+    
+                position: absolute;
+                width: 12.9rem;
+                height: 19.3rem;
+    
+            }
+    
+            .img_container_phone {
+    
+                display: none;
+            }
+    
+            .img__mobile_phone {
+                
+                display: inline;
+                /* width: 12.9rem; */
+                width: 100%;
+                height: 19.3rem;
+                margin-right: 0rem;
+                opacity: 0.3;
+                filter: contrast(200%);
+                
+            }
+            
+    
+            .img_container_glass {
+    
+                display:none;
+            }
+    
+            .img__mobile_glass {
+                
+                flex-grow: 1;
+                display: inline;
+                width: 19.0rem;
+                height: 19.3rem;
+            }
+    
+            .img_container_content {
+    
+                flex-direction: column;
+                margin-left: 0rem;
+                justify-content: center;
+                text-align: center;
+                padding: 3rem;
+                
+            }
+    
+            .img_container_content > h2 {
+    
+                margin: 0;
+            }
+
+
+            /* Function - Section  */
+
+            .functions {
+
+                flex-direction: column;
+                text-align: center;
+               
+            }
+    
+            .function__content {
+    
+              
+                padding: 0rem;
+                width: 100%;
+            }
+    
+           
+            .icon__container {
+    
+                margin-right: auto;
+                margin-left: auto;
+            }
+
+
+            /* Footer - section  */
+
+
+    
+            .footer > div {
+    
+                
+                margin-left: 15%;
+               
+                transform: translate(0%);
+            }
+    
+
+
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     /* ----MOBILE --- VERSION--- */
 
@@ -699,9 +904,6 @@ img {
         /* ----footer - section--- */
 
 
-        .footer {
-
-        }
 
         .footer > div {
 
